RTL Tab handling is imperfect https://bugs.webkit.org/show_bug.cgi?id=250969 <rdar://problem/104528894>

Reviewed by Antti Koivisto.

As described in Line::appendTextContent, with position dependent character widths, unless we chop them for painting the same way we measure them at layout (i.e. measure whitespace/non-whitespace inline text items separately),
we may end up placing (painting) them at incorrect positions.
e.g. [&#1588;][tab] in right-to-left context
  1. first we split the content into 2 dedicated inline items (non-whitespace[&#1588;] and whitespace [tab]) and measure them individually.
  2. starting with the logically leading character [&#1588;], followed by the trailing tab character. At this point the tab character has a non-zero x offset (assume [&#1588;] is measured > 0).
  3. now at paint time if we attempt to paint these 2 characters as one joint TextRun ([&#1588;][tab]), the visually leading [tab] now may produce a different advance width at position 0.

* LayoutTests/fast/inline/rtl-with-position-dependent-content-width-expected.html: Added.
* LayoutTests/fast/inline/rtl-with-position-dependent-content-width.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):

Canonical link: https://commits.webkit.org/259428@main